--- a/webapp/css/center.css
+++ b/webapp/css/center.css
@@ -21,7 +21,7 @@
 .left-list2 .active-list img {display:inline-block;margin: 0 .8rem 0 -1.55rem;}
 
 /* 修改头像内容 */
-.center-update {display: block;}
+.center-update {display: none;}
 .update-content {display: flex;}
 .center-center {width: 20.1rem;margin: 0 4rem 0 3.2rem;}
 .center-center p {font-size: .7rem;color:rgba(255,255,255,.5);padding: 1.2rem 0;}
@@ -89,7 +89,7 @@
 .success-content ul li button {width: 12.75rem;color: #434561;}
 
 /* 基础信息 */
-.center-basis {display: none;}
+.center-basis {display: block;}
 .basis-content {height: 28.1rem;padding: 2.85rem 2.8rem 0 3.2rem;font-size: .75rem;}
 .basis-head figure,.basis-head figure figcaption {display: flex;align-items: center;}
 .basis-list1 {padding-left: 2.3rem;}
